Improve Hazelcast performance